commit for civic hack night

--- a/app/views/parts/_backlog.html.erb
+++ b/app/views/parts/_backlog.html.erb
@@ -175,6 +175,7 @@ http://www.reddit.com/r/elasticsearch/comments/1xvif2/knowledge_level_required_f
 
 </br>
 <strong>Current backlog goals</strong></br>
+*note--write method to calculate hours open </br>
 ===============</br></br>
 TO INITIAL WORKING PROTOTYPE:</br>
 ** fix programs </br>
