--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -2,24 +2,30 @@
 <%= render "/parts/mainnav" %>
 
 <div class="container-fluid">
-<div class="row search-pad">
- <div class="col-lg-4 col-md-offset-1">	
-	<%= image_tag("http://maps.googleapis.com/maps/api/staticmap?center=Atlanta,GA&zoom=13&size=400x400&maptype=roadmap&sensor=false", :class => "img-responsive img-circle map-default", :alt => "map?") %>
- </div>
-	<div class="col-lg-7">
-		<div class="vert-box">
-			
-			 <div class="col-lg-8">
-  				<div class="form-group">
-				<input type="text" class=" form-control input-lg" id="serach" placeholder="What's your goal?">
-    			</div>
-  			 </div>
-  				<button type="submit" class="btn btn-lg btn-primary">Search Cohoot!</button>
-	</div>
-	</div>	
-</div> <!--end row search-pad-->
+  <div class="row">
+  
 
-	<div class="row">
-		<%# render "/parts/backlog" %>
-	</div>
-</div>
+	  <div class="col-lg-12 col-lg-offset-4">
+		  <div class="vert-box">
+        <div class="form-group">
+    			<%= form_for @search, 
+            as: :search, url: results_path, 
+            method: 'get', 
+            :html => {:class => "form-horizontal center"} do %>
+                <div class="form-inline col-lg-12">
+                  <%= text_field_tag :q, params[:q], 
+                      class: "form-control input-lg", 
+                      placeholder: "What's your goal?" %>
+                  <%= submit_tag "Search!",  class: "btn btn-lg btn-primary col-sm-offset-1" %> 
+                </div> 
+            <% end %> 
+        </div> 
+      </div>
+    </div>
+
+
+  </div> <!--end row-->
+</div> 
+
+
+
