--- a/app/views/programs/_form.html.erb
+++ b/app/views/programs/_form.html.erb
@@ -8,7 +8,7 @@
       <div class="form-inputs">
 
           <%= f.input :prog_name, label: 'The name of your program or service'  %>
-
+          <%= f.input :prog_obj, label: 'What is your program objective'  %>
           <div class="col-md-6">
 
           <%= f.input :hrs_mon_s, collection: ['12:00am', '1:00am', '2:00am', '3:00am', '4:00am', '5:00am', '6:00am', '7:00am', '8:00am', '9:00am', '10:00am', '11:00am', '12:00pm', '1:00pm', '2:00pm', '3:00pm', '4:00pm', '5:00pm', '6:00pm', '7:00pm', '8:00pm', '9:00pm', '10:00pm', '11:00pm'], label: 'Monday opening time' %>
